<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/linear1"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="8dp"
		android:orientation="vertical">
		<LinearLayout
			android:id="@+id/l_reg"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:padding="8dp"
			android:orientation="vertical"
			android:layout_weight="1">
			<LinearLayout
				android:id="@+id/l_phone"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:orientation="vertical">
				<TextView
					android:id="@+id/t_description"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="@string/label_phone"
					android:textSize="12sp"
					android:textColor="#000000"/>
				<EditText
					android:id="@+id/e_num"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:textSize="18sp"
					android:textColor="#000000"
					android:hint="@string/hint_phone"
					android:textColorHint="#607D8B"
					android:inputType="phone"/>
				<Button
					android:id="@+id/b_verify_phone"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="@string/button_check"
					android:textSize="12sp"
					android:textColor="#000000"
					android:layout_gravity="right"/>
			</LinearLayout>
			<LinearLayout
				android:id="@+id/l_otp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:orientation="vertical">
				<TextView
					android:id="@+id/e_task_description"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="@string/label_acception"
					android:textSize="12sp"
					android:textColor="#000000"/>
				<EditText
					android:id="@+id/e_otp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:textSize="18sp"
					android:textColor="#000000"
					android:hint="@string/hint_otp"
					android:textColorHint="#607D8B"
					android:inputType="numberDecimal"/>
				<Button
					android:id="@+id/b_send_otp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="@string/button_send"
					android:textSize="12sp"
					android:textColor="#000000"
					android:layout_gravity="right"/>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/l_auth"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:padding="8dp"
			android:orientation="vertical"
			android:layout_weight="1"/>
	</LinearLayout>
</LinearLayout>
