<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#00BCD4"
	android:orientation="vertical">

	<LinearLayout
		android:id="@+id/linear1"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:padding="2dp">

		<Spinner
			android:id="@+id/spin_master"
			style="@style/Widget.AppCompat.Spinner.DropDown"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
			android:contentDescription="@string/spin_master"
			android:minHeight="48dp"
			android:rotationX="5" />

		<Spinner
			android:id="@+id/spin_spec"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
			android:contentDescription="@string/spin_spec"
			android:minHeight="48dp"
			android:rotationX="5"
			tools:ignore="SpeakableTextPresentCheck" />

		<EditText
			android:id="@+id/e_task_description"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
			android:hint="@string/hint_description"
			android:inputType="text"
			android:lines="3"
			android:minHeight="48dp"
			android:padding="8dp"
			android:rotationX="5"
			android:textColor="#000000"
			android:textColorHint="#1976D2"
			android:textSize="16sp"
			tools:ignore="TextContrastCheck"
			android:importantForAutofill="no" />

		<LinearLayout
			android:id="@+id/l_task_dates"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:baselineAligned="false">

			<LinearLayout
				android:id="@+id/l_date_start"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
				android:gravity="center"
				android:orientation="horizontal"
				android:paddingStart="8dp"
				android:paddingEnd="8dp"
				android:rotationX="5">

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="vertical">

					<TextView
						android:id="@+id/t_label_start"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/label_start_task"
						android:textColor="#1976D2" />

					<TextView
						android:id="@+id/t_date_start"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:gravity="center_horizontal"
						android:text="@string/def_date"
						android:textColor="#1976D2" />
				</LinearLayout>

				<ImageView
					android:id="@+id/i_date_start"
					android:layout_width="30dp"
					android:layout_height="30dp"
					android:contentDescription="@string/label_start_task"
					app:srcCompat="@drawable/ic_calendar" />
			</LinearLayout>

			<LinearLayout
				android:id="@+id/l_date_end"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
				android:gravity="center"
				android:orientation="horizontal"
				android:paddingStart="8dp"
				android:paddingEnd="8dp"
				android:rotationX="5">

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="vertical">

					<TextView
						android:id="@+id/t_label_finish"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/label_end_task"
						android:textColor="#1976D2" />

					<TextView
						android:id="@+id/t_date_finish"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:gravity="center_horizontal"
						android:text="@string/def_date"
						android:textColor="#1976D2" />
				</LinearLayout>

				<ImageView
					android:id="@+id/i_date_finish"
					android:layout_width="30dp"
					android:layout_height="30dp"
					android:contentDescription="@string/label_end_task"
					app:srcCompat="@drawable/ic_calendar" />
			</LinearLayout>

		</LinearLayout>

		<LinearLayout
			android:id="@+id/l_reward"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
			android:gravity="center_vertical"
			android:orientation="horizontal"
			android:paddingStart="8dp"
			android:paddingEnd="8dp"
			android:rotationX="5">

			<TextView
				android:id="@+id/t_reward"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_reward"
				android:textColor="#1976D2" />

			<EditText
				android:id="@+id/e_reward"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:ems="10"
				android:importantForAutofill="no"
				android:inputType="numberDecimal"
				android:minHeight="48dp"
				tools:ignore="SpeakableTextPresentCheck" />

			<ImageView
				android:id="@+id/i_reward_got"
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:contentDescription="@string/label_reward"
				app:srcCompat="@drawable/ic_not" />
		</LinearLayout>

		<LinearLayout
			android:id="@+id/l_payment"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
			android:gravity="center_vertical"
			android:orientation="horizontal"
			android:paddingStart="8dp"
			android:paddingEnd="8dp"
			android:rotationX="5">

			<TextView
				android:id="@+id/t_payment"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_payment"
				android:textColor="#1976D2" />

			<EditText
				android:id="@+id/e_payment"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:ems="10"
				android:importantForAutofill="no"
				android:inputType="numberDecimal"
				android:minHeight="48dp"
				tools:ignore="SpeakableTextPresentCheck" />

			<Button
				android:id="@+id/b_payment"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/button_payment"
				android:textColor="#00695C"
				tools:ignore="TextContrastCheck" />

			<ImageView
				android:id="@+id/i_payment_list"
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:contentDescription="@string/label_reward"
				app:srcCompat="@drawable/ic_payment_list" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<Button
				android:id="@+id/b_create"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/button_as_new_task"
				android:textColor="#283593"
				android:textSize="12sp" />

			<Button
				android:id="@+id/b_approve"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:padding="8dp"
				android:text="@string/button_as_finished"
				android:textColor="#283593"
				android:textSize="12sp" />
		</LinearLayout>

		<ListView
			android:id="@+id/lv_reports"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:choiceMode="none" />

		<Button
			android:id="@+id/b_add_report"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:padding="8dp"
			android:text="@string/button_add_report"
			android:textColor="#000000"
			android:textSize="12sp" />

	</LinearLayout>
</LinearLayout>
