<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
	android:orientation="vertical">

	<LinearLayout
		android:id="@+id/linear1"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:padding="8dp">

		<TextView
			android:id="@+id/e_task_description"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:text="@string/label_phone"
			android:textColor="#000000"
			android:textSize="12sp" />

		<TextView
			android:id="@+id/t_phone"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="8dp"
			android:paddingRight="8dp"
			android:paddingBottom="8dp"
			android:textColor="#000000"
			android:textSize="18sp" />

		<TextView
			android:id="@+id/textview3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:text="@string/label_fio"
			android:textColor="#000000"
			android:textSize="12sp" />

		<EditText
			android:id="@+id/e_fio"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/hint_fio"
			android:importantForAutofill="no"
			android:inputType="text"
			android:minHeight="48dp"
			android:paddingLeft="8dp"
			android:paddingRight="8dp"
			android:paddingBottom="8dp"
			android:textColor="#000000"
			android:textColorHint="#546E7A"
			android:textSize="18sp" />

		<TextView
			android:id="@+id/textview4"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:text="@string/label_spec"
			android:textColor="#000000"
			android:textSize="12sp" />

		<EditText
			android:id="@+id/e_spec"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/hint_spec"
			android:importantForAutofill="no"
			android:inputType="text"
			android:minHeight="48dp"
			android:paddingLeft="8dp"
			android:paddingRight="8dp"
			android:paddingBottom="8dp"
			android:textColor="#000000"
			android:textColorHint="#546E7A"
			android:textSize="18sp" />

		<Button
			android:id="@+id/b_save"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:padding="8dp"
			android:text="@string/button_save"
			android:textColor="#000000"
			android:textSize="12sp" />

		<LinearLayout
			android:id="@+id/l_table"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:background="#373737"
			android:orientation="vertical"
			android:paddingTop="1dp"
			android:paddingBottom="1dp">

			<LinearLayout
				android:id="@+id/l_table_head"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="2dp"
				android:layout_marginTop="1dp"
				android:layout_marginEnd="2dp"
				android:layout_marginBottom="1dp"
				android:baselineAligned="false"
				android:orientation="horizontal">

				<LinearLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="#000000"
					android:gravity="center"
					android:orientation="vertical"
					android:padding="4dp">

					<TextView
						android:id="@+id/t_head_params"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textColor="#FFFFFF"
						android:textStyle="bold" />
				</LinearLayout>

				<LinearLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="2dp"
					android:layout_marginEnd="2dp"
					android:layout_weight="2"
					android:background="#000000"
					android:gravity="center"
					android:orientation="vertical"
					android:padding="4dp">

					<TextView
						android:id="@+id/t_head_total"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/head_total"
						android:textColor="#FFFFFF"
						android:textStyle="bold" />
				</LinearLayout>

				<LinearLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="2"
					android:background="#000000"
					android:gravity="center"
					android:orientation="vertical"
					android:padding="4dp">

					<TextView
						android:id="@+id/t_head_finished"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/head_finished"
						android:textColor="#FFFFFF"
						android:textStyle="bold" />
				</LinearLayout>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/l_row_tasks"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="2dp"
				android:layout_marginTop="1dp"
				android:layout_marginEnd="2dp"
				android:layout_marginBottom="1dp"
				android:baselineAligned="false"
				android:orientation="horizontal">

				<LinearLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="#FFFFFF"
					android:orientation="vertical"
					android:padding="4dp">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/row_tasks" />
				</LinearLayout>

				<LinearLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="2dp"
					android:layout_marginEnd="2dp"
					android:layout_weight="2"
					android:background="#FFFFFF"
					android:gravity="end"
					android:orientation="vertical"
					android:padding="4dp">

					<TextView
						android:id="@+id/t_total_tasks"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="0" />
				</LinearLayout>

				<LinearLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="2"
					android:background="#FFFFFF"
					android:gravity="end"
					android:orientation="vertical"
					android:padding="4dp">

					<TextView
						android:id="@+id/t_finished_tasks"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="0" />
				</LinearLayout>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/l_row_pay"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="2dp"
				android:layout_marginTop="1dp"
				android:layout_marginEnd="2dp"
				android:layout_marginBottom="1dp"
				android:baselineAligned="false"
				android:orientation="horizontal">

				<LinearLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="#FFFFFF"
					android:orientation="vertical"
					android:padding="4dp">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/row_pay" />
				</LinearLayout>

				<LinearLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="2dp"
					android:layout_marginEnd="2dp"
					android:layout_weight="2"
					android:background="#FFFFFF"
					android:gravity="end"
					android:orientation="vertical"
					android:padding="4dp">

					<TextView
						android:id="@+id/t_total_pay"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="0.00" />
				</LinearLayout>

				<LinearLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="2"
					android:background="#FFFFFF"
					android:gravity="end"
					android:orientation="vertical"
					android:padding="4dp">

					<TextView
						android:id="@+id/t_finished_pay"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="0.00" />
				</LinearLayout>
			</LinearLayout>

		</LinearLayout>

	</LinearLayout>
</ScrollView>
