<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PaymentsActivity">

    <LinearLayout
        android:id="@+id/l_current_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/label_pay_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_payment_desc" />

        <EditText
            android:id="@+id/e_payment_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_payment_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_payment" />

            <EditText
                android:id="@+id/e_payment_cost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberSigned"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/b_payment_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_payment_apply" />
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_payments"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>